--- a/app/templates/main/archives.html
+++ b/app/templates/main/archives.html
@@ -33,6 +33,7 @@
                         {% endfor %}
                     </ul>
                 </li>
+                <li><a href="{{ url_for('main.about') }}">关于我</a></li>
             </ul>
         </div>
     </header>
