--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -81,16 +81,15 @@
     <script src="https://cdn.jsdelivr.net/npm/amazeui@2.7.2/dist/js/amazeui.min.js"></script>
     <!-- mathjax -->
     <script type="text/x-mathjax-config">
-            MathJax.Hub.Config({
-                tex2jax: {
-                    inlineMath: [ ['$', '$'] ],
-                    displayMath: [ ['$$', '$$'], ['$$$', '$$$']],
-                    processEscapes: true,
-                    skipTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
-                }
-            });
-        </script>
-    <script async src="https://cdn.jsdelivr.net/npm/mathjax@2.7.5/MathJax.js?config=TeX-MML-AM_HTMLorMML"></script>
+                MathJax.Hub.Config({
+                    tex2jax: {
+                        inlineMath: [ ['$','$'], ["\\(","\\)"]  ],
+                        processEscapes: true,
+                        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
+                    }
+                });
+    </script>
+    <script async src="https://cdn.jsdelivr.net/npm/mathjax@2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <!-- 替换表格css -->
     <script type="text/javascript">
         $("img").addClass("am-img-responsive");
