--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -99,6 +99,15 @@
         $("tr").addClass("row100");
         $("tr").first().addClass("head");
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148949360-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-148949360-1');
+    </script>
+
 </body>
 
 </html>
